# secret-operator

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.MD  README.adoc  README.md  Tiltfile  _test.yaml  build.rs  crate-hashes.json  crds.yaml  default.nix  deny.toml  example-consumer-nginx.yaml  example-consumer.yaml  nginx-deployment.yaml  provisioner.yaml  shell.nix  test.p12  test.yaml  values.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  daily_security.yml  helm_tests.yml  pr_conventional-title.yaml  pr_generate_manifests.yml  pr_pre-commit.yaml  pr_reviewdog.yaml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  reviewdog.yaml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
.readme/partials/borrowed/: overview_blurb.md.j2
deploy/: DO_NOT_EDIT.md  kustomization.yaml
deploy/helm/secret-operator/: Chart.yaml  README.md  kustomization.yaml  values.yaml
deploy/helm/secret-operator/crds/: crds.yaml
deploy/helm/secret-operator/templates/: _local_helpers.tpl  controller-deployment.yaml  csi-node-driver-daemonset.yaml  csi-server-daemonset.yaml  csidriver.yaml  daemonset.yaml  deployment.yaml  roles.yaml  secret_migration.yaml  secret_migration_job.yaml  secret_migration_rbac.yaml  secretclasses.yaml  service.yaml  serviceaccount.yaml  storageclass.yaml
deploy/manifests/: configmap.yaml  crds.yaml  csidriver.yaml  daemonset.yaml  deployment.yaml  roles.yaml  secretclasses.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.1.0/manifests/: csv.yaml  secret-operator-clusterrole.yaml  secret-operator-manifests.yaml
deploy/olm/23.1.0/metadata/: dependencies.yaml
deploy/olm/23.4.0/manifests/: secret-operator-clusterrole.yaml  secret-operator-manifests.yaml  stackable-secret-operator.clusterserviceversion.yaml
deploy/olm/catalog/: operator.yaml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: secretclass-tls.yaml  usage-pod.yaml  volume-pod.yaml
docs/modules/ROOT/pages/: building.adoc  commandline_args.adoc  configuration.adoc  index.adoc  installation.adoc  scope.adoc  secretclass.adoc  usage.adoc  volume.adoc
docs/modules/secret-operator/: nav.adoc
docs/modules/secret-operator/examples/: secretclass-certmanager-key-length.yaml  secretclass-tls-key-length.yaml  secretclass-tls.yaml  truststore-tls.yaml  usage-pod.yaml  usage-secretclass-tls.yaml  volume-pod.yaml
docs/modules/secret-operator/pages/: building.adoc  cert-manager.adoc  commandline_args.adoc  index.adoc  installation.adoc  openshift.adoc  scope.adoc  secretclass.adoc  security.adoc  troubleshooting.adoc  (+3 more)
examples/: simple-consumer-nginx.yaml  simple-consumer-shell.yaml
extra/: crds.yaml
krb5/: Dockerfile  krb-client.yaml  krb5.yaml
kustomize/: kustomization.yaml  readme.txt
nix/: meta.json  sources.json
rust/cert-tools/: CHANGELOG.md  Cargo.toml  RELEASE.md  cliff.toml  committed.toml
rust/cert-tools/src/: cert_ext.rs  cli.rs  cli_args.rs  main.rs  parsers.rs
rust/cert-tools/src/cmds/: mod.rs  pkcs12.rs
rust/cert-tools/src/parsers/: mod.rs  pem.rs  pkcs12.rs
rust/crd-utils/: Cargo.toml
rust/crd-utils/src/: lib.rs
rust/krb5/: Cargo.toml  kt
rust/krb5-cli/: Cargo.toml
rust/krb5-cli/src/: main.rs
rust/krb5-provision-keytab/: Cargo.toml  README.md
rust/krb5-provision-keytab/src/: active_directory.rs  credential_cache.rs  lib.rs  main.rs  mit.rs  secret_ref.rs
rust/krb5-sys/: Cargo.toml  build.rs  wrapper.h
rust/krb5-sys/src/: lib.rs
rust/krb5/src/: kadm5.rs  lib.rs  main.rs  profile.rs
rust/olm-deployer/: Cargo.toml  README.md
rust/olm-deployer/src/: data.rs  main.rs
rust/olm-deployer/src/env/: mod.rs
rust/olm-deployer/src/namespace/: mod.rs
rust/olm-deployer/src/owner/: mod.rs
rust/olm-deployer/src/resources/: mod.rs
rust/olm-deployer/src/tolerations/: mod.rs
rust/olm-deployer/tests/manifests/: daemonset.yaml  tls.yaml
rust/olm-deployer/tests/manifests/deployer/: csi-driver.yaml  migration-job.yaml  secret_migration_rbac.yaml  storage-class.yaml
rust/olm-deployer/tests/manifests/nginx/: deployment.yaml
rust/olm-deployer/tests/manifests/olm/: roles.yaml  serviceaccount.yaml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: cert_manager.rs  crd.rs  grpc.rs  lib.rs  main.rs  secretclass.yaml  truststore_controller.rs  utils.rs
rust/operator-binary/src/backend/: cert_manager.rs  dynamic.rs  k8s_search.rs  kerberos_keytab.rs  mod.rs  pod_info.rs  scope.rs  tls.rs
rust/operator-binary/src/backend/auto_tls/: ca.rs  mod.rs
rust/operator-binary/src/backend/tls/: ca.rs  mod.rs
rust/operator-binary/src/crd/: mod.rs  v1alpha1_impl.rs
rust/operator-binary/src/crd/secret_class/: mod.rs  v1alpha1_impl.rs  v1alpha2_impl.rs
rust/operator-binary/src/crd/trust_store/: mod.rs
rust/operator-binary/src/csi_server/: controller.rs  identity.rs  mod.rs  node.rs
rust/operator-binary/src/external_crd/: cert_manager.rs  mod.rs
rust/operator-binary/src/format/: convert.rs  mod.rs  utils.rs  well_known.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/p12/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  clientcert.der  clientkey.der
rust/p12/.github/: FUNDING.yml
rust/p12/.github/workflows/: build-and-test.yaml  lint.yaml  security.yaml
rust/p12/src/: lib.rs
rust/truststore-merger/: Cargo.toml
rust/truststore-merger/src/: cert_ext.rs  cli_args.rs  main.rs  parsers.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs  pem.rs  pkcs12.rs
scripts/: docs_templating.sh  generate-manifests.sh  generate-olm.py  release_cert-tools.sh  run-tests
src/: crd.rs  grpc.rs  lib.rs  main.rs  utils.rs
src/backend/: dynamic.rs  k8s_search.rs  mod.rs  pod_info.rs  scope.rs  tls.rs
tests/: infrastructure.yaml  release.yaml  test-definition.yaml
(+96 files in other folders)
