[workspace]
members = ["rust/*"]
default-members = ["rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/secret-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", features = ["time", "telemetry"], tag = "stackable-operator-0.93.0" }

anyhow = "1.0"
async-trait = "0.1"
bindgen = "0.71"
built = { version = "0.8", features = ["chrono", "git2"] }
byteorder = "1.5"
clap = "4.5"
const_format = "0.2.34"
futures = { version = "0.3", features = ["compat"] }
h2 = "0.4"
kube-runtime = { version = "1.0", features = ["unstable-runtime-stream-control"] }
ldap3 = { version = "0.11", default-features = false, features = ["gssapi", "tls"] }
libc = "0.2"
native-tls = "0.2"
openssl = "0.10"
pin-project = "1.1"
pkg-config = "0.3"
prost = "0.13"
prost-types = "0.13"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
socket2 = { version = "0.5", features = ["all"] }
strum = { version = "0.27", features = ["derive"] }
sys-mount = { version = "3.0", default-features = false }
tempfile = "3.12"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.13"
tonic-build = "0.13"
tonic-reflection = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
yasna = "0.5"

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
