[workspace]
members = ["rust/*"]
default-members = ["rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["Stackable GmbH <info@stackable.tech>"]
license = "OSL-3.0"
edition = "2021"
repository = "https://github.com/stackabletech/secret-operator"

[workspace.dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.106.1", features = ["time", "telemetry", "versioned", "webhook"] }
krb5 = { git = "https://github.com/stackabletech/krb5-rs.git", tag = "v0.1.0" }

anyhow = "1.0"
async-trait = "0.1"
built = { version = "0.8", features = ["chrono", "git2"] }
byteorder = "1.5"
chrono = "0.4"
clap = "4.5"
const_format = "0.2.34"
futures = { version = "0.3", features = ["compat"] }
h2 = "0.4"
hex = "0.4"
# We can't use the stackable-operator re-export because we need the special "unstable-runtime-stream-control"
# feature. We don't want to enable it in stackable-operator, as we don't want to accidentally use
# unstable features.
# This version needs to match the kube version that is re-exported by stackable-operator, so that
# the feature unification works!
kube-runtime = { git = "https://github.com/kube-rs/kube-rs", rev = "fe69cc486ff8e62a7da61d64ec3ebbd9e64c43b5", default-features = false, features = ["unstable-runtime-stream-control"] }
# Hopefully soon we can switch to
# kube-runtime = { version = "*", default-features = false, features = ["unstable-runtime-stream-control"] }
ldap3 = { version = "0.11", default-features = false, features = ["gssapi", "tls"] }
libc = "0.2"
native-tls = "0.2"
openssl = "0.10"
pin-project = "1.1"
prost = "0.14"
prost-types = "0.14"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
socket2 = { version = "0.6", features = ["all"] }
strum = { version = "0.27", features = ["derive"] }
sys-mount = { version = "3.0", default-features = false }
tempfile = "3.12"
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
yasna = "0.5"

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "../operator-rs/crates/stackable-operator" }
# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
