[package]
name = "cert-tools"
description = "A CLI tool to merge two truststores in PEM or PKCS12 format in such as way that they are accepted by the JVM"
version = "0.0.0-dev"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-secret-operator-utils = { path = "../utils" }
stackable-telemetry = { git = "https://github.com/stackabletech/operator-rs.git", features = ["clap"], tag = "stackable-telemetry-0.6.1" }

clap = { workspace = true, features = ["derive"] }
hex.workspace = true
openssl.workspace = true
snafu.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
built.workspace = true
