[package]
name = "stackable-krb5-provision-keytab"
description = "CLI for provisioning Kerberos keytabs"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-secret-operator-crd-utils = { path = "../crd-utils" }
krb5.workspace = true

byteorder.workspace = true
futures.workspace = true
ldap3.workspace = true
native-tls.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
