[package]
name = "krb5-sys"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Raw bindings for libkrb5 and libkadm5"
license = "OSL-3.0"
version = "0.0.0-dev"
edition = "2021"
repository = "https://github.com/stackabletech/secret-operator"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.24"
