[package]
name = "krb5-sys"
description = "Raw bindings for libkrb5 and libkadm5"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]

[build-dependencies]
bindgen.workspace = true
pkg-config.workspace = true
