[package]
name = "krb5"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Safe wrapper library for libkrb5 and libkadm5"
license = "OSL-3.0"
version = "0.0.0-dev"
edition = "2021"
repository = "https://github.com/stackabletech/secret-operator"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krb5-sys = { path = "../krb5-sys" }
snafu = "0.7.4"
