[package]
name = "krb5"
description = "Safe wrapper library for libkrb5 and libkadm5"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
krb5-sys = { path = "../krb5-sys" }

snafu.workspace = true
