[package]
name = "olm-deployer"
description = "OLM deployment helper."
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-operator.workspace = true
stackable-telemetry.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true

[build-dependencies]
built.workspace = true
