[package]
name = "stackable-secret-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for managing credentials"
license = "OSL-3.0"
version = "23.7.0"
edition = "2021"
repository = "https://github.com/stackabletech/secret-operator"
publish = false

[dependencies]
anyhow = "1.0.64"
async-trait = "0.1.57"
clap = "4.0"
futures = "0.3.24"
libc = "0.2.132"
openssl = "0.10.41"
pin-project = "1.0.12"
prost = "0.11"
prost-types = "0.11"
serde = "1.0.144"
serde_json = "1.0.85"
snafu = "0.7.4"
socket2 = { version = "0.4.7", features = ["all"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }
sys-mount = { version = "1.5.1", default-features = false }
tempfile = "3.3.0"
time = "0.3.14"
tokio = { version = "1.23.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tonic = "0.8"
tonic-reflection = "0.6.0"
tracing = "0.1.36"

h2 = "=0.3.18" # Need to keep this in sync with our patched h2 build
uuid = { version = "1.2.2", features = ["v4"] }
stackable-krb5-provision-keytab = { path = "../krb5-provision-keytab" }
strum = { version = "0.25.0", features = ["derive"] }
p12 = "0.6.3"
yasna = "0.5.2"


[dev-dependencies]
time = { version = "0.3.14", features = ["parsing"] }

[build-dependencies]
built = { version = "0.5.1", features = ["chrono", "git2"] }
tonic-build = "0.8"

[features]
