[package]
name = "stackable-secret-operator"
description = "Stackable Operator for managing credentials"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
stackable-krb5-provision-keytab = { path = "../krb5-provision-keytab" }
stackable-secret-operator-crd-utils = { path = "../crd-utils" }
p12 = { path = "../p12" }

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
h2.workspace = true
kube-runtime.workspace = true
libc.workspace = true
openssl.workspace = true
pin-project.workspace = true
prost-types.workspace = true
prost.workspace = true
serde_json.workspace = true
serde.workspace = true
snafu.workspace = true
socket2.workspace = true
stackable-operator.workspace = true
strum.workspace = true
sys-mount.workspace = true
tempfile.workspace = true
time.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
yasna.workspace = true
rand.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true
tonic-build.workspace = true

[features]
